...
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/saveWeatherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="onClick"
        android:text="@string/save"
        android:textSize="20sp"
...
        app:layout_constraintLeft_toRightOf="@id/lastTemperatureConst"
        app:layout_constraintTop_toBottomOf="@id/lastCityConst"
        app:layout_constraintWidth_percent="0.35"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/showAllSavingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="onClick"
        android:text="@string/show_savings"
        android:textSize="20sp"
...
